--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,30 +4,30 @@ name: Update Push Date
 on:
   push:
     branches:
-      - main # מפעיל את ה-Workflow רק ב-push ל-branch הראשי
+      - main
 
 jobs:
   update-log:
-    runs-on: ubuntu-latest # מריץ את ה-job על מכונה וירטואלית של אובונטו
+    runs-on: ubuntu-latest
     permissions:
-      contents: write # נותן הרשאה ל-Workflow לשנות קבצים בפרויקט
+      contents: write
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4 # מוריד את קבצי הפרויקט למכונה הווירטואלית
+        uses: actions/checkout@v4
 
-      - name: Get current date and time
-        id: date
-        run: echo "current_date=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT # שומר את התאריך והזמן המעודכנים במשתנה
+      - name: Get current date, time, and user
+        id: info
+        run: echo "current_info=$(date '+%Y-%m-%d %H:%M:%S') by ${{ github.actor }}" >> $GITHUB_OUTPUT # שומר את התאריך, השעה והמשתמש במשתנה
 
-      - name: Append date to file
+      - name: Append info to file
         run: |
-          echo "${{ steps.date.outputs.current_date }}" >> push_date.log
+          echo "${{ steps.info.outputs.current_info }}" >> push_date.log
 
       - name: Commit and push updated file
         run: |
-          git config --global user.name 'github-actions[bot]' # מגדיר את שם המשתמש עבור הקומיט
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com' # מגדיר את המייל של המשתמש
-          git add push_date.log # מוסיף את הקובץ המעודכן לקומיט
-          git commit -m "Update push_date.log with latest push date" # יוצר קומיט חדש
-          git push # דוחף את השינויים חזרה ל-repository
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add push_date.log
+          git commit -m "Update push_date.log with latest push info"
+          git push
