--- a/.github/workflows/Docker _Test_Server_CI.yml
+++ b/.github/workflows/Docker _Test_Server_CI.yml
@@ -35,3 +35,17 @@ jobs:
             echo "❌ Test FAILED"
             exit 1
           fi
+
+      - name: Login to Docker Hub
+        if: success()
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push server_test image
+        if: success()
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/server_test:latest ./servertest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/server_test:latest
+          echo "✅ Image pushed to Docker Hub successfully!"
