--- a/.github/workflows/Docker _Test_Server_CI.yml
+++ b/.github/workflows/Docker _Test_Server_CI.yml
@@ -41,11 +41,39 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: moshe2003
-          password: dckr_pat_eiACPW4WmsNvxTxXPIVni7wkxgo
+          password: ${{ secrets.DOCKERHUB }}
+
+      - name: Get next version number
+        if: success()
+        id: version
+        run: |
+          # Get latest version from Docker Hub
+          LATEST_VERSION=$(docker run --rm curlimages/curl -s "https://registry.hub.docker.com/v2/repositories/moshe2003/server_test/tags/?page_size=100" | grep -o '"name":"[0-9]*"' | grep -o '[0-9]*' | sort -n | tail -1)
+          
+          # If no versions exist, start with 1
+          if [ -z "$LATEST_VERSION" ]; then
+            NEXT_VERSION=1
+          else
+            NEXT_VERSION=$((LATEST_VERSION + 1))
+          fi
+          
+          echo "version=$NEXT_VERSION" >> $GITHUB_OUTPUT
+          echo "Next version: $NEXT_VERSION"
 
       - name: Build and push server_test image
         if: success()
         run: |
-          docker build -t moshe2003/server_test:latest ./servertest
+          VERSION=${{ steps.version.outputs.version }}
+          echo "Building version: $VERSION"
+          
+          # Build with version tag
+          docker build -t moshe2003/server_test:$VERSION ./servertest
+          docker push moshe2003/server_test:$VERSION
+          
+          # Also tag as latest
+          docker tag moshe2003/server_test:$VERSION moshe2003/server_test:latest
           docker push moshe2003/server_test:latest
+          
           echo "✅ Image pushed to Docker Hub successfully!"
+          echo "Version: $VERSION"
+          echo "Latest: latest"
