--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,6 +12,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check secrets
+        run: |
+          if [ -z "${{ secrets.AWS_SERVER_IP }}" ]; then
+            echo "AWS_SERVER_IP is missing"
+          else
+            echo "AWS_SERVER_IP is set"
+          fi
+          if [ -z "${{ secrets.AWS_SERVER_USER }}" ]; then
+            echo "AWS_SERVER_USER is missing"
+          else
+            echo "AWS_SERVER_USER is set"
+          fi
+          if [ -z "${{ secrets.AWS_SERVER_KEY }}" ]; then
+            echo "AWS_SERVER_KEY is missing"
+          else
+            echo "AWS_SERVER_KEY is set"
+          fi
       - name: Deploy on server
         uses: appleboy/ssh-action@v1.0.3
         with:
