--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,5 +36,5 @@ jobs:
           username: ${{ secrets.AWS_SERVER_USER }}
           key: ${{ secrets.AWS_SERVER_KEY }}
           script: |
-            docker compose pull
-            docker compose up -d
+            docker-compose pull
+            docker-compose up -d
